Fix mssql tests